--- a/calculator.html
+++ b/calculator.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>calculator</title>
-	<script src="jquery.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<style>
 		body{display:flex;align-items:center;justify-content:center;margin:0px;background-image:linear-gradient(to top,aqua,lightblue,dodgerblue,blue);}
 		#main{opacity:0;transition:all 2s;height:600px;width:500px;box-shadow:0px 0 100px black;}
@@ -72,37 +72,37 @@
 			}
 		</script>
 		<script>
-			<!-- function style(){ -->
-				<!-- var main = document.getElementById("main"); -->
-				<!-- var textdiv = document.getElementById("txtdiv"); -->
-				<!-- textdiv.style.transform="translatex(-100px)"; -->
-				<!-- main.style.transform="translatex(100px)"; -->
-				<!-- main.style.opacity="1"; -->
-				<!-- textdiv.style.opacity="1"; -->
-			<!-- } -->
-			<!-- function clearText(){ -->
-				<!-- var text = document.getElementById("txt"); -->
-				<!-- text.value = ""; -->
-			<!-- } -->
-			<!-- function deleteChar(){ -->
-				<!-- var text = document.getElementById("txt"); -->
-				<!-- text.value = text.value.substring(0,text.value.length-1); -->
-			<!-- } -->
-			<!-- function enterValue(element){ -->
-				<!-- var text = document.getElementById("txt"); -->
-				<!-- var str = text.value; -->
-				<!-- if (str == ""){ -->
-					<!-- if(!isNaN(parseInt(element.innerHTML))){ -->
-						<!-- text.value = text.value + element.innerHTML; -->
-					<!-- } -->
-				<!-- }else if((isNaN(parseInt(str.charAt(str.length-1))) && !isNaN(parseInt(element.innerHTML))) || !isNaN(parseInt(str.charAt(str.length-1)))){ -->
-						<!-- text.value = text.value + element.innerHTML;					 -->
-				<!-- } -->
-			<!-- } -->
-			<!-- function result(){ -->
-				<!-- var text = document.getElementById("txt"); -->
-				<!-- text.value = eval(text.value); <!-- used for evaluate result of expression --> -->
-			<!-- } -->
+			// <!-- function style(){ -->
+			// 	<!-- var main = document.getElementById("main"); -->
+			// 	<!-- var textdiv = document.getElementById("txtdiv"); -->
+			// 	<!-- textdiv.style.transform="translatex(-100px)"; -->
+			// 	<!-- main.style.transform="translatex(100px)"; -->
+			// 	<!-- main.style.opacity="1"; -->
+			// 	<!-- textdiv.style.opacity="1"; -->
+			// <!-- } -->
+			// <!-- function clearText(){ -->
+			// 	<!-- var text = document.getElementById("txt"); -->
+			// 	<!-- text.value = ""; -->
+			// <!-- } -->
+			// <!-- function deleteChar(){ -->
+			// 	<!-- var text = document.getElementById("txt"); -->
+			// 	<!-- text.value = text.value.substring(0,text.value.length-1); -->
+			// <!-- } -->
+			// <!-- function enterValue(element){ -->
+			// 	<!-- var text = document.getElementById("txt"); -->
+			// 	<!-- var str = text.value; -->
+			// 	<!-- if (str == ""){ -->
+			// 		<!-- if(!isNaN(parseInt(element.innerHTML))){ -->
+			// 			<!-- text.value = text.value + element.innerHTML; -->
+			// 		<!-- } -->
+			// 	<!-- }else if((isNaN(parseInt(str.charAt(str.length-1))) && !isNaN(parseInt(element.innerHTML))) || !isNaN(parseInt(str.charAt(str.length-1)))){ -->
+			// 			<!-- text.value = text.value + element.innerHTML;					 -->
+			// 	<!-- } -->
+			// <!-- } -->
+			// <!-- function result(){ -->
+			// 	<!-- var text = document.getElementById("txt"); -->
+			// 	<!-- text.value = eval(text.value); <!-- used for evaluate result of expression --> -->
+			// <!-- } -->
 		</script>
 		<div id="btnfamily">
 			<button id="C" class="btngrp" >C</button> 
