--- a/color.html
+++ b/color.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>rgb values of colors by Trideepshivam</title>
-	<script src="jquery.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<style>
 		input[type=text]{
 			font-size:50px;
