--- a/foodmart.html
+++ b/foodmart.html
@@ -267,7 +267,7 @@
 			<fieldset id="productcontainer" class="txtcontainer" style="float:left;">
 				<legend class="topname">PRODUCT:</legend>
 				<select onchange="setproductprice(this.value)" id="selectproduct" class="choose" onfocusout="sethead2(this)" onfocus="sethead(this)">
-					<option style="appearence:none;"></option>
+					<option ></option>
 					<option>Pizza</option>
 					<option>Burger</option>
 					<option>Sandwitch</option>
