--- a/login_glassmorphism.html
+++ b/login_glassmorphism.html
@@ -1,7 +1,7 @@
 <!DOCKTYPE html>
 <html>
 <head>
-	<script src="jquery.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
