--- a/login_glassmorphism.html
+++ b/login_glassmorphism.html
@@ -107,7 +107,7 @@
 				$glass = $(this).find(".glassmorphism");
 				$glass.css({"right":"101%"});
 			},function(){
-			$glass = $(this).find(".glassmorphism");<!-- next(); -->
+			$glass = $(this).find(".glassmorphism");
 			$glass.css({"right":"-101px"});
 			});
 			$("#btnin").click(function(){
